# cascade

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  LICENSE  NANOCLAW-SETUP-PLAN.md  QUICKSTART.md  README.md  Untitled.md  generate-presentation.js  main.py  package-lock.json  package.json
cascade-api/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  railway.toml
cascade-api/cascade_api/: config.py  consent.py  dependencies.py  handlers.py  ingest.py  ingest_supabase.py  insights.py  main.py  multi_bot.py  ollama_embedder.py  ollama_extractor.py  permissions.py  rotating_embedder.py  synthesize.py  utils.py
cascade-api/cascade_api/agent/: __init__.py  loop.py  memory_decay.py  memory_extractor.py  system_prompt.py  tools.py
cascade-api/cascade_api/api/: auth.py  cascade_plan.py  cron.py  log.py  onboard.py  payment.py  plan.py  reprioritize.py  review.py  router.py  status.py  steer.py  stripe_webhook.py  (+1 more)
cascade-api/tests/: conftest.py  test_agent_loop_tracing.py  test_api.py  test_cascade_plan.py  test_chatgpt_importer.py  test_embeddings.py  test_evals.py  test_graph.py  test_ingest.py  test_insights.py  test_integration_demo.py  test_langfuse.py  test_memory_db.py  test_memory_decay.py  test_memory_extractor.py  test_memory_integration.py  test_memory_tools.py  test_onboard.py  test_permissions.py  test_posthog.py  test_scheduler.py  test_steer.py  test_stripe.py  test_system_prompt.py  test_telegram_handlers.py  test_telegram_webhook.py  test_tokens.py  test_trial_manager.py  test_utils.py
tools/cascade-research/: config.yaml  pyproject.toml
(+173 files in other folders)
